# slsl_dictionary

./: .gitignore  README.md  VIDEO_VERSIONING_TESTING.md  questions.md  todo
.githooks/: pre-commit
.github/: filters.yml
.github/ISSUE_TEMPLATE/: 📖-data-issue.md
.github/workflows/: android_upload.yaml  ci.yml  ios_upload.yaml  pages.yaml  promote-android.yaml  promote.yaml  web.yaml
.zed/: settings.json
admin_site/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
admin_site/scripts/: backup_db.sh  find_broken_links.py  find_unused_videos.py  translate_definitions.py
admin_site/slsl_backend/: admin.py  asgi.py  dump.py  models.py  secrets.py  settings.py  urls.py  validators.py
admin_site/slsl_backend/management/commands/: bootstrap_phrases.py  bootstrap_words.py  find_broken_links.py  find_unused_videos.py  generate_csv.py  initadmin.py  load_csv.py  load_definition_translations.py
admin_site/slsl_backend/migrations/: 0002_alter_video_media.py  0004_alter_entry_category.py  0007_alter_video_media.py  0008_alter_video_media.py  0009_subentry_region_alter_video_media.py  0010_subentry_related_words_alter_definition_language.py  0011_remove_entry_related_words_and_more.py  0015_category_entry_categories.py  0016_remove_entry_category.py  0017_definition_translation_of.py  0018_alter_video_media.py  0019_alter_definition_category.py  0020_video_note_video_published_video_recorded_and_more.py  0021_alter_subentry_options_alter_video_options_and_more.py
admin_site/staticfiles/slsl_backend/: reorder_handles.css
backend/: .gitignore  Dockerfile  Makefile  README.md  devdb.sqlite3  manage.py  pyproject.toml  run.sh  secrets.json
backend/scripts/: build_dev_secrets.py  find_broken_links.py  find_unused_videos.py
backend/slsl_backend/: admin.py  dump.py  models.py  secrets.py  settings.py  storages.py  urls.py  views.py  wsgi.py
backend/slsl_backend/management/commands/: bootstrap_entries.py  bootstrap_phrases.py  generate_csv.py
backend/slsl_backend/migrations/: 0001_initial.py  0003_entry_category_delete_mediahandle.py  0005_alter_entry_options.py  0006_alter_video_media.py  0010_subentry_related_words_alter_definition_language.py  0011_remove_entry_related_words_and_more.py  0012_entry_entry_type_alter_subentry_related_words.py  0013_alter_entry_entry_type_alter_video_media.py  0014_alter_subentry_related_words.py
deployment/: Pulumi.prod.yaml  Pulumi.yaml  README.md  admin-site-cloud-run.ts  admin-site-config.ts  app.ts  common.ts  config.ts  db.ts  functions.ts  iam.ts  index.ts  lb.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.ts  scheduler.ts  storage.ts  tsconfig.json  utils.ts
deployment/dump_function/: main.py  requirements.txt
frontend/: .gitignore  README.md  analysis_options.yaml  l10n.yaml  promote.sh  pubspec.yaml  release.sh
frontend/android/: .gitignore  build.gradle  settings.gradle  upload.sh
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/assets/: README.md  advisories.md
frontend/assets/data/: dump.json
frontend/assets/icon/: banner.xcf
frontend/integration_test/: lists_rename_test.dart  review_early_exit_test.dart  review_session_test.dart  save_video_test.dart  saved_count_test.dart  screenshot_test.dart  test_config.dart  theme_picker_test.dart  toast_dismiss_test.dart  video_versioning_test.dart
frontend/integration_test/multi_device/: md_common.dart  md_config.dart  phase_a_owner_shares_test.dart  run.sh
frontend/ios/: .gitignore  ExportOptions.plist  Podfile  publish.sh  upload.sh  upload_screenshots.sh
frontend/ios/Runner/: Info.plist  Runner.entitlements
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/ios/Runner.xcodeproj/xcshareddata/xcschemes/: AuslanDictionaryUITestsTwo.xcscheme  Runner.xcscheme
frontend/ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
frontend/ios/fastlane/: Appfile  Fastfile  Matchfile
frontend/lib/: advisories.dart  common.dart  entries_loader.dart  entries_logic.dart  entries_types.dart  entries_types.g.dart  entry_list.dart  error_fallback.dart  flashcards_help_page_en.dart  flashcards_landing_page.dart  flashcards_logic.dart  flashcards_page.dart  globals.dart  language_dropdown.dart  legal_information.dart  main.dart  revision_history_page.dart  root.dart  search_page.dart  settings_help_page.dart  settings_page.dart  top_level_scaffold.dart  types.dart  video_player_screen.dart  word_list_help_page_en.dart  word_list_logic.dart  word_list_overview_help_page_en.dart  word_list_overview_page.dart  word_list_page.dart  word_page.dart
frontend/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_si.dart  app_localizations_ta.dart  app_si.arb  app_ta.arb
frontend/old/: DEV.md
frontend/screenshots/: take_screenshots.py  upload_screenshots.py
frontend/test/: main_test.dart
frontend/web/: index.html  manifest.json
site/: README.md  wrangler.toml
site/src/: index.html  privacy.html  terms.html
