[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Admin backend for SLSL Dictionary"
authors = ["Daniel Porteous <danielporteous1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.6"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
